# clawpm

./: .gitattributes  .gitignore  .scope  AGENTS.md  AGENTS.md.template  CLAUDE.md  README.md  ROADMAP.md  UPSTREAM-BRIEF.md  WORKFLOW-RUNTIME-INTEGRATION.md  codex-instructions.md  pyproject.toml  sync-runtime-clones.sh
.github/workflows/: tests.yml
.project/: SPEC.md  learnings.md  settings.toml
.project/notes/: README.md
.project/research/: 2026-05-22_feature-mining-8-adjacent-task-agent-repos-claude.md  2026-06-01_workflows-runtime-and-clawpm-cross-pollination-plu.md  (+5 more)
archive/: CHANGELOG.md
docs/: WORKFLOW-RUNTIME-INTEGRATION.md
tests/: conftest.py  test_agent_dispatch.py  test_agent_profile.py  test_all_projects.py  test_baseline_drift.py  test_batch.py  test_bug_fixes.py  test_bulk_state.py  test_cascade.py  test_clawp051_concurrency_lock.py  test_clawp060_scope_file.py  test_clawp063_drift_marker.py  test_clawp071_transaction_integrity.py  test_clawp072_ergonomics.py  test_clawp085_archive.py  test_clawpm_sync_hook.py  test_codegraph_integration.py  test_codex_check.py  test_concurrency.py  test_confirm_close.py  test_constitution.py  test_context.py  test_contract_fields.py  test_dedup_and_encoding.py  test_dispatch.py  test_doctor_apply.py  test_doctor_apply_unit.py  test_dual_lookup.py  test_emit_tree.py  test_encoding_and_dedup.py  test_encoding_check.py  test_frontmatter.py  test_hints.py  test_history.py  test_inbox.py  test_introspect.py  test_issues_observation_and_tags.py  test_iteration_log.py  test_judge_fallback.py  test_leases.py  (+28 more)
(+226 files in other folders)
